--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-stay tuned 😜
+code samples accompanying my pygotham talk
+
+https://2017.pygotham.org/talks/build-your-own-not-hotdog-deep-learning-model/
+
+🖼️🔢✨
