--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-code samples that accompany my pygotham talk
+code samples (see convnets.ipynb) that accompany my pygotham talk
 
 https://2017.pygotham.org/talks/build-your-own-not-hotdog-deep-learning-model/
 
-🖼️🔢✨
+🖼 + 🔢 + ✨
 
 ---
 
