tweaks, add PIL

--- a/convnets.ipynb
+++ b/convnets.ipynb
@@ -52,7 +52,8 @@
     "from keras.preprocessing.image import array_to_img, img_to_array, load_img, ImageDataGenerator\n",
     "from keras.utils import to_categorical\n",
     "\n",
-    "from IPython.display import HTML, display"
+    "from IPython.display import HTML, display\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -66,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# helpers\n",
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
     {
      "data": {
       "text/html": [
-       "<img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_9938.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3648.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7726.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4705.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_5978.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_8519.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_391.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4925.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_1356.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4129.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4624.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3291.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3857.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_2822.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7432.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3398.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3699.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_1340.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6552.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_8010.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_335.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6799.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6957.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3084.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_2479.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4923.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6416.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4804.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6022.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_8810.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_9473.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4529.jpeg'/>"
+       "<img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_1583.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_1926.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_2268.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_306.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3330.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3439.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3885.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3900.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_3975.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4178.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4279.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4448.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_489.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_4956.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_5696.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_63.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6392.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6605.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_6624.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_674.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7105.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7282.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7283.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7454.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_7968.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_8505.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_8854.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_9410.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_978.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_9792.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_991.jpeg'/><img style='width:150px;margin:2px;float:left;' src='data/augment/pizza_0_9991.jpeg'/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
